--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "jest-editor-support": "*",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
-    "jest-editor-support": "*"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.8",
